24-Apr-2020  - V0.61 Add return type processing in UrlRequestUtil() and undecorated method entry points.
 8-May-2020  - V0.62 Add default comment parser as a fallback for the FastaUtil()
13-May-2020  - V0.63 Update test cases for py 2.7.18.
26-May-2020  - V0.64 Adding timeout and user agent for url fetchs
28-May-2020  - V0.65 Add alternative URL fetch methods using requests module
 4-Jun-2020  - V0.66 Add public bundle and unbundle tar file methods in FileUtil()
 5-Jun-2020  - V0.67 Add sftp client class SftpUtil() and tests.
 9-Jun-2020  - V0.68 Documentation updates and some additional pre-checks for path existence prior to copy operations.
19-Jun-2020  - V0.69 Exposing comment parsing methods in FastaUtil().
20-Jul-2020  - V0.70 Expose request timeout as a keyword argument for unwrapped requests.
20-Jul-2020  - V0.71 Further adjustments in logging and error handling
21-Jul-2020  - V0.72 Add module StashUtil() to simplify backup of and recovery of bundled directories of data
                     from remote storage resources.
22-Jul-2020  - V0.73 Adjust api nomenclature
22-Jul-2020  - V0.74 Create destination directory for tarfile unbundling
 1-Aug-2020  - V0.75 Add https protocol StashUtil.fetchBundle()
24-Aug-2020  - V0.76 Add module ProcessStatusUtil() and related tests.
19-Oct-2020  - V0.77 Adjust troubleshooting logging
26-Oct-2020  - V0.78 down version numpy to 1.18.0 to solve Py3.9 macos issue
26-Oct-2020  - V0.79 handle Py27 numpy limit in requirements
 2-Nov-2020  - V0.80 add gzip support to json deserialization method.
 9-Nov-2020  - V0.81 add zip unbundle method to FileUtil()
 9-Nov-2020  - V0.82 add stdin option in ExecUtil().run()
23-Nov-2020  - V0.83 add option to turn on SSL verification in requests() package
23-Nov-2020  - V0.84 add option to restore SSL3 ciphers to urlopen connections
24-Nov-2020  - V0.85 disable uniprot tests for now until cert/handshake issues to work with Ubuntu 20.20