@@ -84,3 +84,4 @@
 23-Nov-2020  - V0.83 add option to turn on SSL verification in requests() package
 23-Nov-2020  - V0.84 add option to restore SSL3 ciphers to urlopen connections
 24-Nov-2020  - V0.85 disable uniprot tests for now until cert/handshake issues to work with Ubuntu 20.20
+ 1-Dec-2020  - V0.86 add tagged Fasta comment style and option to synthesize fasta comments
